--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 16px;
+  font-size: 14px;
   color: #333333;
 }
 body a {
@@ -22,6 +22,9 @@ body header .header-container {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+}
+body header .header-container .header-left {
+  font-size: 24px;
 }
 body header .header-container .header-right nav li {
   display: none;
@@ -74,6 +77,7 @@ body main .top-page .top-page__left h1 {
 body main .top-page img {
   width: 50%;
   height: 350px;
+  object-fit: cover;
 }
 body main .main-container {
   width: 90%;
@@ -84,6 +88,7 @@ body main .main-container .work .subtitle {
   height: 40px;
   background-color: #CE7476;
   color: white;
+  font-size: 20px;
   display: flex;
   align-items: center;
   margin-bottom: 40px;
@@ -98,7 +103,6 @@ body main .main-container .work .work-wrap {
 }
 body main .main-container .work .work-wrap .work-wrap__thumb img {
   width: 90%;
-  height: 200px;
 }
 body main .main-container .work .work-wrap .work-wrap__text {
   padding-top: 15px;
@@ -111,6 +115,7 @@ body main .main-container .profile .subtitle {
   height: 40px;
   background-color: #CE7476;
   color: white;
+  font-size: 20px;
   display: flex;
   align-items: center;
   margin-bottom: 40px;
@@ -123,9 +128,10 @@ body main .main-container .profile .my-profile {
   line-height: 1.5;
 }
 body main .main-container .profile .my-profile img {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
+  object-fit: cover;
 }
 body main .main-container .profile .my-profile p:nth-child(4) {
   font-size: 24px;
@@ -158,6 +164,7 @@ body main .main-container .contact .subtitle {
   height: 40px;
   background-color: #CE7476;
   color: white;
+  font-size: 20px;
   display: flex;
   align-items: center;
   margin-bottom: 40px;
