--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -8,7 +8,7 @@ body a {
 }
 body header {
   position: fixed;
-  z-index: 10;
+  z-index: 2;
   background-color: white;
   display: flex;
   width: 100%;
@@ -22,23 +22,72 @@ body header .header-container {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+  height: 95px;
 }
 body header .header-container .header-left {
   font-size: 24px;
 }
-body header .header-container .header-right nav li {
-  display: none;
+@media (min-width: 680px) {
+  body header .header-container .header-right {
+    display: flex;
+    justify-content: space-around;
+  }
 }
-body header .header-container .header-right .nav-button {
-  position: relative;
+@media (min-width: 680px) {
+  body header .header-container .header-right li {
+    margin-left: 10px;
+  }
+}
+body header .header-container nav {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  text-align: center;
+  transform: translateY(-100%);
+  transition: all 300ms 0s ease;
+  width: 100%;
+  font-size: 1.5em;
+}
+body header .header-container nav .active {
+  transition: all 300ms 0s ease;
+  transform: translateY(0%);
+}
+@media (min-width: 680px) {
+  body header .header-container nav {
+    position: relative;
+    font-size: 1em;
+    width: auto;
+    top: 15px;
+  }
+}
+body header .header-container .nav-button {
   display: inline-block;
   z-index: 3;
+  position: relative;
   width: 38px;
   height: 30px;
   transition: all .4s;
   box-sizing: border-box;
+  margin-right: 20px;
 }
-body header .header-container .header-right .nav-button span {
+body header .header-container .nav-button .active {
+  transition: all 300ms 0s ease;
+}
+body header .header-container .nav-button .active span:nth-child(1) {
+  transform: rotateZ(-45deg);
+  transform-origin: top right;
+}
+body header .header-container .nav-button .active span:nth-child(2) {
+  opacity: 0;
+}
+body header .header-container .nav-button .active span:nth-child(3) {
+  transform: rotateZ(45deg);
+  transform-origin: bottom right;
+}
+body header .header-container .nav-button span {
+  display: inline-block;
+  z-index: 3;
   position: absolute;
   left: 0;
   width: 100%;
@@ -46,11 +95,22 @@ body header .header-container .header-right .nav-button span {
   background-color: #000;
   border-radius: 4px;
 }
-body header .header-container .header-right .nav-button span:nth-child(2) {
+body header .header-container .nav-button span:nth-child(2) {
   top: 13px;
 }
-body header .header-container .header-right .nav-button span:nth-child(3) {
+body header .header-container .nav-button span:nth-child(3) {
   top: 26px;
+}
+@media (min-width: 680px) {
+  body header .header-container .nav-button {
+    display: none;
+  }
+  body header .header-container .nav-button span {
+    display: none;
+    transition: all .4s;
+    box-sizing: border-box;
+    margin-right: 20px;
+  }
 }
 body main {
   position: relative;
@@ -63,6 +123,12 @@ body main .top-page {
   height: 350px;
   background-color: #840202;
 }
+@media (min-width: 680px) {
+  body main .top-page {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 body main .top-page .top-page__left {
   display: flex;
   align-items: center;
@@ -74,6 +140,11 @@ body main .top-page .top-page__left h1 {
   line-height: 1.5;
   color: white;
 }
+@media (min-width: 680px) {
+  body main .top-page .top-page__left h1 br:nth-child(odd) {
+    display: none;
+  }
+}
 body main .top-page img {
   width: 50%;
   height: 350px;
@@ -83,6 +154,11 @@ body main .main-container {
   width: 90%;
   padding-top: 40px;
   margin: 0 auto;
+}
+@media (min-width: 680px) {
+  body main .main-container {
+    width: 70%;
+  }
 }
 body main .main-container .work .subtitle {
   height: 40px;
@@ -97,9 +173,24 @@ body main .main-container .work .subtitle h2 {
   padding-left: 17px;
 }
 body main .main-container .work .work-wrap {
-  background-color: white;
   text-align: center;
+}
+@media (min-width: 680px) {
+  body main .main-container .work .work-wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+body main .main-container .work .work-wrap .work-content {
   padding: 20px 0;
+  background-color: white;
+  margin-top: 20px;
+}
+@media (min-width: 680px) {
+  body main .main-container .work .work-wrap .work-content {
+    width: 45%;
+    margin-top: 0;
+  }
 }
 body main .main-container .work .work-wrap .work-wrap__thumb img {
   width: 90%;
@@ -123,9 +214,26 @@ body main .main-container .profile .subtitle {
 body main .main-container .profile .subtitle h2 {
   padding-left: 17px;
 }
+@media (min-width: 680px) {
+  body main .main-container .profile .my-profile__wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 680px) and (min-width: 680px) {
+  body main .main-container .profile .my-profile__wrap .sub-profile {
+    width: 50%;
+  }
+}
+
 body main .main-container .profile .my-profile {
   text-align: center;
   line-height: 1.5;
+}
+@media (min-width: 680px) {
+  body main .main-container .profile .my-profile {
+    width: 45%;
+  }
 }
 body main .main-container .profile .my-profile img {
   width: 250px;
@@ -133,7 +241,13 @@ body main .main-container .profile .my-profile img {
   border-radius: 50%;
   object-fit: cover;
 }
-body main .main-container .profile .my-profile p:nth-child(4) {
+@media (min-width: 680px) {
+  body main .main-container .profile .my-profile img {
+    width: 200px;
+    height: 200px;
+  }
+}
+body main .main-container .profile .my-profile .big-text {
   font-size: 24px;
 }
 body main .main-container .profile .self__introduction {
