--- a/docs/scss/my-profile.scss
+++ b/docs/scss/my-profile.scss
@@ -1,3 +1,20 @@
+$pc: 680px;
+
+@mixin pc {
+  @media(min-width: ($pc)) {
+    @content;
+  }
+}
+
+$tab: 800px;
+
+@mixin tab {
+  @media(min-width: ($tab)) {
+    @content
+  }
+}
+
+
 body {
   font-size: 14px;
   color: #333333;
@@ -18,26 +35,58 @@ body {
         width: 100%;
         height: 150px;
         object-fit: cover;
+        @include pc {
+          height: 250px;
+        }
       }
     }
     .main-container {
       width: 80%;
       margin: 0 auto;
       padding-bottom: 20px;
+      @include pc {
+        width: 70%;
+        .skill-desc__wrap {
+          display: flex;
+          position: static;
+          justify-content: space-between;
+        }
+      }
       .skill {
-        padding: 20px 0;
+        padding: 20px 0 0;
+        @include pc {
+          display: flex;
+          flex-direction: column;
+          width: 40%;
+        }
         .skill-container {
           display: flex;
           justify-content: space-between;
+          @include pc {
+            flex-direction: column;
+            text-align: center;
+          }
           .skill-left {
-            width: 40%;
+            width: 30%;
             position: relative;
             top: -60px;
+            @include pc {
+              position: static;
+              width: 100%;
+            }
             img {
               width: 100px;
               height: 100px;
               border-radius: 50%;
               object-fit: cover;
+              @include pc {
+                width: 200px;
+                height: 200px;
+              }
+              @include tab {
+                width: 250px;
+                height: 250px;
+              }
             }
             p {
               position: relative;
@@ -48,14 +97,34 @@ body {
           .skill-right {
             width: 60%;
             line-height: 1.5;
+            @include pc {
+              width: 100%;
+            }
           }
         }
         .skill-text {
+          text-align: center;
+          position: relative;
+          top: -30px;
+
+          @include pc {
+            position: static;
+            padding-top: 10px;
+            width: 100%;
+          }
         }
       }
       .my-desc {
         padding: 20px 0;
         line-height: 1.5;
+        @include pc {
+          width: 50%;
+          position: relative;
+          // top: 45px;
+        }
+        @include tab {
+          top: 45px;
+        }
       }
       .my-link {
         padding: 20px 0;
@@ -73,6 +142,18 @@ body {
       }
       .history {
         line-height: 1.5;
+        .text {
+          position: relative;
+          left: 5px;
+          margin-bottom: 20px;
+          color: #24AAC2;
+          border-bottom: 2px solid #24AAC2;
+        }
+        @include pc {
+          padding-top: 30px;
+          width: 60%;
+          margin: 0 auto;
+        }
         dl {
           margin-bottom: 15px;
         }
@@ -83,6 +164,7 @@ body {
 
           .year {
             width: 20%;
+            color: #24AAC2;
           }
           p {
               width: 70%;
@@ -114,7 +196,7 @@ body {
       .back-button {
         text-decoration: none;
         display: flex;
-        width: 30%;
+        width: 120px;
         height: 30px;
         margin: 20px auto 0;
         justify-content: center;
